# rmp220-segway-nvision

./: .gitignore  README.md  environment.sh  set_ros_master.sh
catkin_ws/src/pkg_name/: CMakeLists.txt  package.xml
catkin_ws/src/rmp_base/: .autogenerated.md  CMakeLists.txt  README.md  package.xml  setup.py
catkin_ws/src/rmp_base/include/rmp_base/: EXAMPLE_MAIN.py  ReadMe.txt  crc16.py  user_event_handlers.py  util.py
catkin_ws/src/rmp_base/include/rmp_base/RMP_DATA_LOGS/: RMP_DATA_LOG_08312017_002915.csv  RMP_DATA_LOG_08312017_003153.csv  RMP_DATA_LOG_08312017_003335.csv  RMP_DATA_LOG_08312017_003418.csv  RMP_DATA_LOG_08312017_003817.csv  RMP_DATA_LOG_08312017_004011.csv  RMP_DATA_LOG_08312017_004304.csv  RMP_DATA_LOG_08312017_004516.csv  RMP_DATA_LOG_08312017_004847.csv  RMP_DATA_LOG_08312017_005044.csv  RMP_DATA_LOG_08312017_005240.csv  RMP_DATA_LOG_08312017_005554.csv  RMP_DATA_LOG_08312017_005722.csv  RMP_DATA_LOG_08312017_010237.csv  RMP_DATA_LOG_08312017_011538.csv  RMP_DATA_LOG_08312017_011836.csv  RMP_DATA_LOG_08312017_012327.csv  RMP_DATA_LOG_08312017_012808.csv  RMP_DATA_LOG_08312017_013003.csv  RMP_DATA_LOG_08312017_013217.csv
catkin_ws/src/rmp_base/launch/: rmp_base.launch
catkin_ws/src/rmp_base/src/: EXAMPLE_MAIN.py  publisher_node.py  rmp_base.py  rmp_base_3.py  rmp_base_fix_v.py  rmp_base_hz.py  rmp_config_params.py  rmp_interface.py  system_defines.py  test_pub.py  user_event_handlers.py
catkin_ws/src/segway-rmp220-ros/: EXAMPLE_MAIN.py  io_eth_cmd.py  system_defines.py  user_event_handlers.py  utils.py
software/config/: procman.pmd
(+4 files in other folders)
